--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,3 @@
-set(SOURCES main.cpp)
+set(SOURCES main.cpp CPPGPIO/cppgpio.cpp)
 idf_component_register(SRCS ${SOURCES}
-                    INCLUDE_DIRS . ../include)
+                    INCLUDE_DIRS . ../include/CPPGPIO)
